[project]
name = "duld"
version = "0.1.0"
description = "Drive UpLoad Daemon"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0.1,<7.0.0",
    "aiohttp>=3.13.3,<4.0.0",
    "wcpan-drive-cli>=5.0.0,<6.0.0",
    "asyncinotify>=4.2.1,<5.0.0",
    "transmission-rpc>=7.0.11,<8.0.0",
    "wcpan-logging>=2.0.2,<3.0.0",
    "dacite>=1.8.0,<2.0.0",
    "wcpan-drive-sqlite>=4.0.0,<5.0.0",
    "wcpan-drive-synology>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6,<1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
